Add security configuration and greeting endpoint
- Implemented SecurityConfig for basic authentication and user management.
- Added a new GreetingsController with a /hello endpoint returning "Hello World!".
- Updated pom.xml to include spring-boot-starter-security and spring-security-test dependencies.
- Changed project description in pom.xml.
- Updated Java version in pom.xml to 23.

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>SpringSecurity</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringSecurity</name>
-	<description>SpringSecurity</description>
+	<description>Demo Security project</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,9 +27,13 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>23</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -38,6 +42,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
