--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=SpringSecurity
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
+jwt.secret= mySecret
+jwt.expiration.ms=3600000
